--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@tailwindcss/vite": "^4.0.4",
+    "astro": "^5.2.5",
+    "pnpm": "^10.2.0",
+    "tailwindcss": "^4.0.4"
   }
 }
