--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@libsql/client": "^0.14.0",
     "@tailwindcss/vite": "^4.0.4",
     "astro": "^5.2.5",
     "pnpm": "^10.2.0",
